platform/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: order-service
spec:
  to:
    kind: Service
    name: order-service
  port:
    targetPort: http
  tls:
    termination: edge
